@@ -9,19 +9,19 @@ use Net::DNS;
 my $debug = 0;
 
 my @hints = qw(
+		198.41.0.4
+		192.228.79.201
 		192.33.4.12
 		199.7.91.13
 		192.203.230.10
 		192.5.5.241
 		192.112.36.4
-		128.63.2.53
+		198.97.190.53
 		192.36.148.17
 		192.58.128.30
 		193.0.14.129
 		199.7.83.42
 		202.12.27.33
-		198.41.0.4
-		192.228.79.201
 		);
 
 
@@ -55,26 +55,18 @@ eval {
 } || exit( plan skip_all => 'Unable to access global root nameservers' );
 
 
-my $res = Net::DNS::Resolver->new( prefer_v4 => 1 );
-
-my $IP;
-
 # query local nameserver using any available transport
-my $nsanswer = $res->send( 'net-dns.org', 'NS', 'IN' );
+my $res	    = Net::DNS::Resolver->new( prefer_v4 => 1 );
+my $nsreply = $res->send(qw(net-dns.org NS IN));
+my @nsdname = map $_->can('nsdname') ? $_->nsdname : (), $nsreply->answer;
 
-foreach my $ns ( $nsanswer->answer ) {
-	next unless $ns->type eq 'NS';
+# assume any working net-dns.org nameserver will do
+$res->nameservers(@nsdname);
+$res->force_v4(1);
+my $test = $res->send(qw(net-dns.org NS IN));
+my $IP	 = $test->answerfrom;
 
-	# assume any net-dns.org nameserver will do
-	my $qtype = 'A';
-	my $reply = $res->send( $ns->nsdname, $qtype, 'IN' ) || next;
-	next unless $reply->header->ancount;
-	my @answer = $reply->answer;
-	my @rr = grep $_->type eq $qtype, @answer;
-	($IP) = map $_->address, @rr;
-	diag join ' ', "\n\t\twill try", $ns->nsdname, "($IP)" if $debug;
-	last;
-}
+diag join( ' ', "\n\t\twill try", $IP ) if $debug;
 
 exit( plan skip_all => 'Unable to access target nameserver' ) unless $IP;
 
