@@ -93,15 +93,6 @@ NonFatalBegin();
 
 
 {
-	my $res = Net::DNS::Resolver::Recurse->new( debug => 0 );
-
-	my $packet = $res->query_dorecursion( "www.google.com.", "A" );
-	ok( $packet, 'got a packet' );
-	ok( scalar $packet->answer, 'answer section has RRs' ) if $packet;
-}
-
-
-{
 	# test hints()
 	my $res = Net::DNS::Resolver::Recurse->new( debug => 0 );
 	is( scalar( $res->hints() ), 0, "hints() empty" );
